force-app/main/default/objects/Points__c/Points__c.object-meta.xml
<CustomObject>
    <label>Points</label>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Points Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>