force-app/main/default/objects/Points__c/fields/Custom_Amount__c.field-meta.xml
<CustomField>
    <fullName>Custom_Amount__c</fullName>
    <label>Custom Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>