force-app/main/default/objects/Points__c/fields/Date_Earned__c.field-meta.xml
<CustomField>
    <fullName>Date_Earned__c</fullName>
    <label>Date Earned</label>
    <type>Date</type>
</CustomField>