force-app/main/default/objects/Points__c/fields/Date_Spent_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Spent_2__c</fullName>
    <label>Date Spent (2)</label>
    <type>Date</type>
</CustomField>