force-app/main/default/objects/Points__c/fields/Date_Spent_3__c.field-meta.xml
<CustomField>
    <fullName>Date_Spent_3__c</fullName>
    <label>Date Spent (3)</label>
    <type>Date</type>
</CustomField>