force-app/main/default/objects/Points__c/fields/Date_Spent__c.field-meta.xml
<CustomField>
    <fullName>Date_Spent__c</fullName>
    <label>Date Spent</label>
    <type>Date</type>
</CustomField>