force-app/main/default/objects/Points__c/fields/Expired1__c.field-meta.xml
<CustomField>
    <fullName>Expired1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>