force-app/main/default/objects/Points__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>TODAY() &gt;  Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired?</label>
    <type>Checkbox</type>
</CustomField>