force-app/main/default/objects/Points__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <formula>IF( Reference_Scheme__r.On_HCM_Program__c = False, Date_Earned__c +365, null)</formula>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>