force-app/main/default/objects/Points__c/fields/Opportunity_Where_Used_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Where_Used_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Where Used (2)</label>
    <referenceTo>Points__c</referenceTo>
    <relationshipLabel>Points (2)</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <type>Lookup</type>
</CustomField>