force-app/main/default/objects/Points__c/fields/Opportunity_Where_Used_3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Where_Used_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Where Used (3)</label>
    <referenceTo>Points__c</referenceTo>
    <relationshipLabel>Points (Opportunity Where Used (3))</relationshipLabel>
    <relationshipName>Points1</relationshipName>
    <type>Lookup</type>
</CustomField>