force-app/main/default/objects/Points__c/fields/Opportunity_where_Used__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_where_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Where Used</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <type>Lookup</type>
</CustomField>