force-app/main/default/objects/Points__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telephone Reference</fullName>
            </value>
            <value>
                <fullName>Executive Quote</fullName>
            </value>
            <value>
                <fullName>Onsite Reference</fullName>
            </value>
            <value>
                <fullName>Webinar Presentation</fullName>
            </value>
            <value>
                <fullName>Case study and press release (written)</fullName>
            </value>
            <value>
                <fullName>Event Speaker</fullName>
            </value>
            <value>
                <fullName>Case study and press release (video and written)</fullName>
            </value>
            <value>
                <fullName>Host and speaker at an Access event on own premises</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
                <isActive>false</isActive>
                <label>Case Study</label>
            </value>
            <value>
                <fullName>Case Study &amp; Press Release (Video &amp; Written)</fullName>
                <isActive>false</isActive>
                <label>Case Study &amp; Press Release (Video &amp; Written)</label>
            </value>
            <value>
                <fullName>Case Study &amp; Press Release (Written)</fullName>
                <isActive>false</isActive>
                <label>Case Study &amp; Press Release (Written)</label>
            </value>
            <value>
                <fullName>Host &amp; Speaker at Access Event on own Premises</fullName>
                <isActive>false</isActive>
                <label>Host &amp; Speaker at Access Event on own Premises</label>
            </value>
            <value>
                <fullName>Points Spend</fullName>
                <isActive>false</isActive>
                <label>Points Spend</label>
            </value>
            <value>
                <fullName>Sign - Up</fullName>
                <isActive>false</isActive>
                <label>Sign - Up</label>
            </value>
            <value>
                <fullName>Sign - Up (HCM)</fullName>
                <isActive>false</isActive>
                <label>Sign - Up (HCM)</label>
            </value>
            <value>
                <fullName>Sign-Up</fullName>
                <isActive>false</isActive>
                <label>Sign-Up</label>
            </value>
            <value>
                <fullName>Sign-Up (HCM)</fullName>
                <isActive>false</isActive>
                <label>Sign-Up (HCM)</label>
            </value>
            <value>
                <fullName>Site Reference</fullName>
                <isActive>false</isActive>
                <label>Site Reference</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>