force-app/main/default/objects/Points__c/fields/Reference_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Reference_Scheme__c</fullName>
    <label>Reference Scheme</label>
    <referenceTo>Reference_Scheme__c</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>