force-app/main/default/objects/Points__c/fields/Remaining_Points__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Points__c</fullName>
    <formula>IF( Expired1__c = TRUE,0,Vaule__c - Spend__c - Spend_2__c - Spend_3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>