force-app/main/default/objects/Points__c/fields/Spend_3__c.field-meta.xml
<CustomField>
    <fullName>Spend_3__c</fullName>
    <label>Spend (3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>