force-app/main/default/objects/Points__c/fields/Spend__c.field-meta.xml
<CustomField>
    <fullName>Spend__c</fullName>
    <label>Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>