force-app/main/default/objects/Points__c/recordTypes/New_Points.recordType-meta.xml
<RecordType>
    <fullName>New_Points</fullName>
    <active>true</active>
    <label>New Points</label>
</RecordType>