force-app/main/default/objects/Points__c/recordTypes/Redemption.recordType-meta.xml
<RecordType>
    <fullName>Redemption</fullName>
    <active>false</active>
    <label>Redemption</label>
</RecordType>