force-app/main/default/objects/Points__c/validationRules/Custom_Points_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Points_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Points__c ,&apos;Custom&apos;),ISBLANK( Custom_Amount__c ))</errorConditionFormula>
    <errorMessage>Record cannot be saved without custom amount</errorMessage>
</ValidationRule>